--- a/driver/reference/hardware/firmware/.vscode/settings.json
+++ b/driver/reference/hardware/firmware/.vscode/settings.json
@@ -16,6 +16,7 @@
         "initializer_list": "cpp",
         "ranges": "cpp",
         "valarray": "cpp",
-        "limits": "cpp"
+        "limits": "cpp",
+        "uart.hpp": "c"
     }
 }
