Avoid using global varibles

--- a/driver/reference/hardware/firmware/platformio.ini
+++ b/driver/reference/hardware/firmware/platformio.ini
@@ -4,4 +4,4 @@ board = bluepill_f103c8
 framework = arduino
 upload_protocol = stlink
 lib_deps = stm32duino/STM32duino FreeRTOS@^10.3.2
-build_flags = -Wl,--no-warn-rwx-segments
+build_flags = -Wl,--no-warn-rwx-segments,-O0
