Firmware stability improvements

--- a/driver/reference/hardware/firmware/.vscode/settings.json
+++ b/driver/reference/hardware/firmware/.vscode/settings.json
@@ -17,6 +17,7 @@
         "ranges": "cpp",
         "valarray": "cpp",
         "limits": "cpp",
-        "uart.hpp": "c"
+        "uart.hpp": "c",
+        "newlib.h": "c"
     }
 }
