--- a/frontend/src/.env
+++ b/frontend/src/.env
@@ -1,2 +1,4 @@
 REACT_APP_VERSION=v0.0.2
-REACT_APP_RELEASE=ea0b850-20240518165234
+REACT_APP_RELEASE=a539ba0-20240601095304
+REACT_APP_GRAPHQL_PROD_URL=/api
+REACT_APP_GRAPHQL_DEVL_URL=http://127.0.0.1:8073/api
