--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -4,27 +4,37 @@
     "private": true,
     "dependencies": {
         "@apollo/client": "^3.9.11",
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
         "@mdi/js": "^7.4.47",
         "@mdi/react": "^1.6.1",
+        "@mui/material": "^5.15.18",
+        "@mui/x-date-pickers": "^6.20.0",
         "axios": "^1.6.8",
         "date-fns": "^2.30.0",
+        "file-saver": "^2.0.5",
         "formik": "^2.4.5",
         "graphql": "^16.8.1",
+        "highcharts": "^11.4.3",
+        "highcharts-react-official": "^3.2.1",
         "i18next": "^23.11.2",
         "i18next-browser-languagedetector": "^7.2.1",
         "jotai": "^2.8.0",
+        "leaflet": "^1.9.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-error-boundary": "^4.0.13",
         "react-hot-toast": "^2.4.1",
         "react-i18next": "^14.1.0",
+        "react-leaflet": "^4.2.1",
         "react-router-dom": "^6.16.0",
+        "react-syntax-highlighter": "^15.5.0",
         "zustand": "^4.5.2"
     },
     "scripts": {
         "start": "cross-env BROWSER=none GENERATE_SOURCEMAP=false react-scripts start",
         "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
-        "codegen": "cross-env DOTENV_CONFIG_PATH=.env.codegen graphql-codegen --config codegen.ts -r dotenv/config"
+        "codegen": "cross-env DOTENV_CONFIG_PATH=.env graphql-codegen --config codegen.ts -r dotenv/config --watch"
     },
     "browserslist": {
         "production": [
@@ -42,13 +52,16 @@
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@craco/craco": "^7.1.0",
         "@graphql-codegen/cli": "5.0.2",
-        "@graphql-codegen/client-preset": "4.2.5",
         "@graphql-codegen/typescript": "^4.0.6",
         "@graphql-codegen/typescript-operations": "^4.2.0",
         "@graphql-codegen/typescript-react-apollo": "^4.3.0",
+        "@parcel/watcher": "^2.4.1",
+        "@types/file-saver": "^2.0.7",
+        "@types/leaflet": "^1.9.12",
         "@types/node": "^16.18.38",
         "@types/react": "^18.2.14",
         "@types/react-dom": "^18.2.6",
+        "@types/react-syntax-highlighter": "^15.5.13",
         "@typescript-eslint/parser": "^5.62.0",
         "cross-env": "^7.0.3",
         "eslint": "^8.57.0",
