--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -6,11 +6,15 @@
         "@apollo/client": "^3.9.11",
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
+        "@fullcalendar/core": "^6.1.14",
+        "@fullcalendar/daygrid": "^6.1.14",
+        "@fullcalendar/react": "^6.1.14",
         "@mdi/js": "^7.4.47",
         "@mdi/react": "^1.6.1",
         "@mui/material": "^5.15.18",
-        "@mui/x-date-pickers": "^6.20.0",
+        "@mui/x-data-grid": "^7.6.2",
         "axios": "^1.6.8",
+        "cesium": "^1.118.2",
         "date-fns": "^2.30.0",
         "file-saver": "^2.0.5",
         "formik": "^2.4.5",
@@ -29,11 +33,12 @@
         "react-leaflet": "^4.2.1",
         "react-router-dom": "^6.16.0",
         "react-syntax-highlighter": "^15.5.0",
+        "resium": "^1.17.4",
         "zustand": "^4.5.2"
     },
     "scripts": {
-        "start": "cross-env BROWSER=none GENERATE_SOURCEMAP=false react-scripts start",
-        "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
+        "start": "cross-env BROWSER=none GENERATE_SOURCEMAP=false craco start",
+        "build": "cross-env GENERATE_SOURCEMAP=false craco build",
         "codegen": "cross-env DOTENV_CONFIG_PATH=.env graphql-codegen --config codegen.ts -r dotenv/config --watch"
     },
     "browserslist": {
@@ -63,12 +68,12 @@
         "@types/react-dom": "^18.2.6",
         "@types/react-syntax-highlighter": "^15.5.13",
         "@typescript-eslint/parser": "^5.62.0",
+        "craco-cesium": "^1.2.0",
         "cross-env": "^7.0.3",
         "eslint": "^8.57.0",
         "eslint-config-react-app": "^7.0.1",
         "eslint-plugin-simple-import-sort": "^12.1.0",
         "prettier": "^3.2.5",
-        "react-scripts": "5.0.1",
         "tailwindcss": "^3.4.3",
         "tailwindcss-animated": "^1.0.1",
         "typescript": "^4.9.5"
