--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -4,11 +4,11 @@
     "private": true,
     "dependencies": {
         "@apollo/client": "^3.9.11",
+        "@devexpress/dx-react-core": "^4.0.8",
+        "@devexpress/dx-react-scheduler": "^4.0.8",
+        "@devexpress/dx-react-scheduler-material-ui": "^4.0.8",
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
-        "@fullcalendar/core": "^6.1.14",
-        "@fullcalendar/daygrid": "^6.1.14",
-        "@fullcalendar/react": "^6.1.14",
         "@mdi/js": "^7.4.47",
         "@mdi/react": "^1.6.1",
         "@mui/material": "^5.15.18",
@@ -25,6 +25,7 @@
         "i18next-browser-languagedetector": "^7.2.1",
         "jotai": "^2.8.0",
         "leaflet": "^1.9.4",
+        "moment": "^2.30.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-error-boundary": "^4.0.13",
