--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -9,6 +9,8 @@
         "@devexpress/dx-react-scheduler-material-ui": "^4.0.8",
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
+        "@ffmpeg/ffmpeg": "^0.12.10",
+        "@ffmpeg/util": "^0.12.1",
         "@mdi/js": "^7.4.47",
         "@mdi/react": "^1.6.1",
         "@mui/material": "^5.15.18",
